# parallel-write-exp

./: Cargo.toml  LICENSE  README.md
src/: concurrent_docids.rs  del_add.rs  fields_ids_map.rs  items_pool.rs  main.rs  main_database.rs  obkv_codec.rs  sequential_docids.rs  temp_database.rs
src/codec/: cbo_roaring_bitmap_codec.rs  mod.rs
src/documents/: builder.rs  enriched.rs  mod.rs  primary_key.rs  reader.rs
src/extract/: mod.rs  word_docids.rs  word_pair_proximity_docids.rs
src/merge/: del_add_roaring_bitmap_merger.rs
src/process/: merge_word_docids_cursors_into_reader.rs  mod.rs  par_extract_word_docids.rs  par_send_merged_documents.rs
src/update/: merge.rs  mod.rs  replace.rs
