[package]
name = "parallel-write-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bimap = { version = "0.6.3", features = ["serde"] }
byte-unit = "5.1.4"
clap = { version = "4.5.10", features = ["derive"] }
csv = "1.3.0"
grenad = "0.4.7"
heed = { version = "0.20.3", features = ["read-txn-no-tls"] }
lorem-ipsum-generator = "0.1.0"
lru = "0.12.3"
memmap2 = "0.9.4"
obkv = { git = "https://github.com/kerollmops/obkv", branch = "unsized-kvreader" }
rand = "0.8.5"
rayon = "1.10.0"
rayon-par-bridge = "0.1.0"
roaring = "0.10.6"
scopeguard = "1.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sled = "0.34.7"
smallvec = { version = "1.13.2", features = ["union"] }
tempfile = "3.10.1"
thiserror = "1.0.63"
walkdir = "2.5.0"
